# sniff

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  sniff.1.scd  sniff.json
.github/workflows/: build.yml
docs/: sniff.5.scd
src/: sniff.rs
