[package]
name = "sniff"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.9.0"
libc = "0.2.124"
log = "0.4.16"
notify = "4.0.17"
regex = "1.5.5"
serde_json = "1.0.79"

[[bin]]
name = "sniff"
path = "src/sniff.rs"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'
strip = true
