[package]
name = "sniff"
version = "1.0.1"
authors = [
	"Shinyzenith <aakashsensharma@gmail.com>",
]
edition = "2021"

[build-dependencies]
flate2 = "1.0.24"

[dependencies]
env_logger = "0.9.0"
libc = "0.2.124"
log = "0.4.16"
notify = "4.0.17"
serde_json = "1.0.79"
serde = {version="1.0.137", features=["derive"]}

[[bin]]
name = "sniff"
path = "src/sniff.rs"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'
strip = true
